--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -31,7 +31,7 @@
 }
 
 .entry-content {
-    margin: 8px 0;
+    margin: 0px 0;
     color: var(--secondary);
     font-size: 14px;
     line-height: 1.6;
@@ -69,7 +69,8 @@
 .entry-cover img {
     border-radius: var(--radius);
     width: 100%;
-    height: auto;
+    height: 150px;
+    object-fit: cover;
     image-rendering: -webkit-optimize-contrast;
 }
 
